# range-v3

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  01_quick_start.html  01_quick_start.md  BUCK  BUILD.bazel  CMakeLists.txt  CREDITS.md  Jamfile  Jamroot  LICENSE  LICENSE.txt  MODULE.bazel  NOTES-build2.md  README.md  TODO.md  Version.cmake  _formulas.tex  accumulate_8hpp.html  accumulate_8hpp.js  action_2action_8hpp.html  action_2action_8hpp.js  action_2adjacent__remove__if_8hpp.html  action_2adjacent__remove__if_8hpp.js  action_2concepts_8hpp.html  action_2concepts_8hpp.js  action_2drop_8hpp.html  action_2drop_8hpp.js  action_2drop__while_8hpp.html  action_2drop__while_8hpp.js  action_2join_8hpp.html  action_2join_8hpp.js  action_2remove_8hpp.html  action_2remove_8hpp.js  action_2remove__if_8hpp.html  action_2remove__if_8hpp.js  action_2reverse_8hpp.html  (+6734 more)
aux/: coverage.cmake  coverage.sh  format.cmake  format.sh  format_check.sh
build2/: .gitignore  bootstrap.build2  export.build2  root.build2
cmake/: FindMeta.cmake  GoogleBenchmark.cmake.in  GoogleTest.cmake.in  TestHeaders.cmake  aligned_new_probe.cpp  concepts_test_code.cpp  coro_test_code.cpp  gbenchmark.cmake  gtest.cmake  range-v3-config.cmake  ranges_diagnostics.cmake  ranges_env.cmake  ranges_flags.cmake  ranges_options.cmake  readme.md  thread_test_code.cpp
doc/: CMakeLists.txt  D4128.md  Doxyfile.in  clean-gh-pages.cmake  examples.md  header.html  ignore_errors.sh  index.md  layout.xml  pandoc-template.html  preprocess.sh.in  release_notes.md  show.cmd  unpreprocess.pl
example/: .clang-format  BUCK  CMakeLists.txt  accumulate_ints.cpp  any_all_none_of.cpp  build2file  calendar.cpp  comprehension_conversion.cpp  comprehensions.cpp  count.cpp  count_if.cpp  date.h  fibonacci.cpp  filter_transform.cpp  find.cpp  for_each_assoc.cpp  for_each_sequence.cpp  hello.cpp  is_sorted.cpp  recursive_range.hpp  sort_unique.cpp
example/build2/: bootstrap.build2  root.build2
example/view/: CMakeLists.txt  filter.cpp  filter_golden.txt  ints.cpp  ints_golden.txt  transform.cpp  transform_golden.txt
include/: module.modulemap
perf/: CMakeLists.txt  build2file  counted_insertion_sort.cpp  range_conversion.cpp  sort_patterns.cpp
perf/build2/: root.build2
scratch/: CMakeLists.txt  scratch.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_63.js  (+194 more)
test/: CMakeLists.txt  array.hpp  base.cpp  begin_end.cpp  bug-guard.cpp  bug1322.cpp  bug1335.cpp  bug1633.cpp  bug1729.cpp  bug1762.cpp  bug1814.cpp  bug474.cpp  bug566.cpp  build2file  config.cpp  constexpr_core.cpp  container_conversion.cpp  debug_view.hpp  distance.cpp  distance_compare.cpp  generator.cpp  getlines.cpp  index.cpp  istream_range.cpp  iterator_range.cpp  jamfile.v2  multiple1.cpp  multiple2.cpp  range.cpp  range_adaptor.cpp  range_facade.cpp  safe_int_swap.hpp  simple_test.hpp  size.cpp  span.cpp  test_iterators.hpp  test_utils.hpp  to_container.cpp  view_adaptor.cpp  view_facade.cpp
test/action/: CMakeLists.txt  adjacent_remove_if.cpp  cont_concepts.cpp  drop.cpp  drop_while.cpp  erase_if.cpp  insert.cpp  join.cpp  push_back.cpp  push_front.cpp  remove.cpp  remove_if.cpp  reverse.cpp  shuffle.cpp  slice.cpp  sort.cpp  split.cpp  stable_sort.cpp  stride.cpp  take.cpp  take_while.cpp  transform.cpp  unique.cpp  unstable_remove_if.cpp
test/algorithm/: CMakeLists.txt  adjacent_find.cpp  adjacent_remove_if.cpp  all_of.cpp  any_of.cpp  binary_search.cpp  contains.cpp  contains_subrange.cpp  copy.cpp  copy_backward.cpp  copy_if.cpp  copy_n.cpp  count.cpp  count_if.cpp  ends_with.cpp  equal.cpp  equal_range.cpp  fill.cpp  fill_n.cpp  find.cpp  find_end.cpp  find_first_of.cpp  find_if.cpp  find_if_not.cpp  fold.cpp  for_each.cpp  for_each_n.cpp  generate.cpp  generate_n.cpp  includes.cpp  inplace_merge.cpp  is_heap.cpp  is_heap.hpp  is_heap1.cpp  is_heap2.cpp  is_heap3.cpp  is_heap4.cpp  is_heap_until.cpp  is_heap_until.hpp  is_heap_until1.cpp  (+95 more)
test/build2/: root.build2
test/container/: CMakeLists.txt  cont_concepts.cpp  drop.cpp  drop_while.cpp  erase_if.cpp  insert.cpp  push_back.cpp  push_front.cpp  slice.cpp  sort.cpp  stride.cpp  take.cpp  take_while.cpp  transform.cpp  unique.cpp
test/container_algorithm/: CMakeLists.txt  push_back.cpp
test/experimental/: CMakeLists.txt
test/experimental/utility/: CMakeLists.txt  async_generator.cpp  generator.cpp  task.cpp
test/experimental/view/: CMakeLists.txt  shared.cpp
test/extension/: CMakeLists.txt  insert.cpp  push_back.cpp  push_front.cpp
test/functional/: CMakeLists.txt  bind_back.cpp  on.cpp
test/iterator/: CMakeLists.txt  basic_iterator.cpp  common_iterator.cpp  counted_iterator.cpp  diffmax_t.cpp  iterator.cpp  reverse_iterator.cpp  unformatted_ostream_iterator.cpp
test/numeric/: CMakeLists.txt  accumulate.cpp  adjacent_difference.cpp  inclusive_scan.cpp  inner_product.cpp  iota.cpp  partial_sum.cpp
test/range/: CMakeLists.txt  access.cpp  access.hpp  conversion.cpp  index.cpp  maybe.cpp  operations.cpp
test/utility/: CMakeLists.txt  basic_iterator.cpp  box.cpp  common_iterator.cpp  common_type.cpp  compare.cpp  concepts.cpp  concepts2.cpp  functional.cpp  is_constexpr_default_cosntructible.cpp  iterator.cpp  meta.cpp  predicate.cpp  reverse_iterator.cpp  scope_exit.cpp  semiregular_box.cpp  swap.cpp  variant.cpp
test/view/: CMakeLists.txt  adaptor.cpp  addressof.cpp  adjacent_filter.cpp  adjacent_remove_if.cpp  all.cpp  any_range.cpp  any_view.cpp  as_bounded_range.cpp  as_range.cpp  basic_range_adaptor.cpp  bounded.cpp  cache1.cpp  cartesian_product.cpp  chunk.cpp  chunk_by.cpp  collapse_if.cpp  collapse_to_if.cpp  common.cpp  compose.cpp  concat.cpp  const.cpp  conversion.cpp  counted.cpp  cycle.cpp  delimit.cpp  drop.cpp  drop_exactly.cpp  drop_last.cpp  drop_while.cpp  enumerate.cpp  exclusive_scan.cpp  facade.cpp  filter.cpp  generate.cpp  generate_n.cpp  getlines.cpp  group_by.cpp  indirect.cpp  intersperse.cpp  (+47 more)
(+480 files in other folders)
